--- a/app/modules/map/partials/MapObjectInformationVertical.html
+++ b/app/modules/map/partials/MapObjectInformationVertical.html
@@ -4,6 +4,7 @@
         </thead>
 
         <tbody>
+        <h3>Detail View</h3>
                 <tr class="elemententry" ng-repeat="element in elements">
                     <td>{{element.label}}</td>
                     <td>{{element.value}}</td>
@@ -11,19 +12,4 @@
         </tbody>
 
     </table>
-    <div>
-        <nvd3-discrete-bar-chart
-                data="exampleData"
-                width="380"
-                height="240"
-                showXAxis="true"
-                interactive="true"
-                tooltips="true"
-                showYAxis="true"
-                showLegend="true" +
-                yAxisLabel="in %" +
-                xAxisLabel="average occupancy per weekday" +>
-            <svg></svg>
-        </nvd3-discrete-bar-chart>
-    </div>
 </div>
