--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -28,6 +28,9 @@
                                 <div class="overlayMapInfo" ng-show="showOverlayMapInfo">
                                     <map-Object-Information  align="Horizontal"></map-Object-Information>
                                 </div>
+                                <div id="mapLegend" ng-controller="mapLegendController">Legend</div>
+
+
                             </div>
                         </section>
                         <a class="exit-off-canvas"></a>
