--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -28,7 +28,15 @@
                                 <div class="overlayMapInfo" ng-show="showOverlayMapInfo">
                                     <map-Object-Information  align="Horizontal"></map-Object-Information>
                                 </div>
-                                <div id="mapLegend" ng-controller="mapLegendController">Legend</div>
+                                <div id="mapLegend" ng-controller="mapLegendController">
+                                <div id="mapLegendContent" ng-if="showLegend" >
+                                    <div id="mapLegendHeadline"><b>Legend</b></div>
+                                    <div ng-repeat="legendElement in legendList">
+                                         <div class="colorLegendBox" style="background-color: {{legendElement.color}}"></div>
+                                        <div class="labelLegendBox">{{legendElement.label}}</div>
+                                        </div>
+                                </div>
+                                </div>
 
 
                             </div>
@@ -79,7 +87,32 @@
                                                 <h2>{{  useCaseTitle }}</h2>
 
 
-                                                <div ng-if="showUseCaseDescription"> Usecase Beschreibung {{  useCaseDescription }} </div>
+
+
+
+                                                <dl class="tabs">
+                                                    <dd class="active"><a href="#simple1">Simple Tab 1</a></dd>
+                                                    <dd><a href="#simple2">Simple Tab 2</a></dd>
+                                                    <dd class="hide-for-small"><a href="#simple3">Simple Tab 3</a></dd>
+                                                </dl>
+                                                <ul class="tabs-content">
+                                                    <li class="active" id="simple1Tab">This is simple tab 1s content. Pretty neat, huh?</li>
+                                                    <li id="simple2Tab">This is simple tab 2s content. Now you see it!</li>
+                                                    <li id="simple3Tab">This is simple tab 3s content.</li>
+                                                </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+                                                <div ng-if="showUseCaseDescription"> {{  useCaseDescription }} </div>
 
                                                     <map-Object-Information ng-if="showDetailView"  align="Vertical"></map-Object-Information>
 
