--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -88,31 +88,24 @@
 
 
 
+                                                <div ng-controller="tabController">
+                                                <tabset>
+
+                                                    <tab heading="Scenario">{{  useCaseDescription }}</tab>
+                                                    <tab heading="Information" ng-if="showInformation" active="showInformation">               <div ng-controller="StatusPanelMainChartController" ng-if="showCharts">
+                                                        <div class="chart" ng-repeat="chart in charts">
+                                                            <h3>{{chart.chart.title}}</h3>
+                                                            <nvd3 options="chart.chart.options" data="chart.chart.data" api="api"></nvd3>
+                                                            {{chart.chart.description}}
+                                                        </div>
+                                                    </div></tab>
+
+                                                    <tab heading="Detail View" active="showDetailView" ng-if="showDetailView"><map-Object-Information align="Vertical"></map-Object-Information></tab>
+
+                                                </tabset>
 
 
-                                                <dl class="tabs">
-                                                    <dd class="active"><a href="#simple1">Simple Tab 1</a></dd>
-                                                    <dd><a href="#simple2">Simple Tab 2</a></dd>
-                                                    <dd class="hide-for-small"><a href="#simple3">Simple Tab 3</a></dd>
-                                                </dl>
-                                                <ul class="tabs-content">
-                                                    <li class="active" id="simple1Tab">This is simple tab 1s content. Pretty neat, huh?</li>
-                                                    <li id="simple2Tab">This is simple tab 2s content. Now you see it!</li>
-                                                    <li id="simple3Tab">This is simple tab 3s content.</li>
-                                                </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-                                                <div ng-if="showUseCaseDescription"> {{  useCaseDescription }} </div>
+<!--                                                <div ng-if="showUseCaseDescription"> {{  useCaseDescription }} </div>
 
                                                     <map-Object-Information ng-if="showDetailView"  align="Vertical"></map-Object-Information>
 
@@ -123,6 +116,10 @@
                                                         <nvd3 options="chart.chart.options" data="chart.chart.data" api="api"></nvd3>
                                                         {{chart.chart.description}}
                                                     </div>
+</div> -->
+
+
+
                                                 </div>
                                             </div>
                                         </div>
