--- a/app/css/main.css
+++ b/app/css/main.css
@@ -391,3 +391,45 @@ input[type="search"],input[type="search"]:focus {
     height:830px;
     width:1617px;
 }
+#loadingIconDiv
+{
+
+    width: 1617px;
+    height: 830px;
+    position: relative;
+    left: 0px;
+    bottom: 830px;
+    background: rgba(255, 255, 255, 1);
+
+}
+#loadingIcon {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: -800px;
+    bottom: 0;
+    right: 0
+}
+
+
+#loading-bar .bar {
+    -webkit-transition: width 350ms;
+    -moz-transition: width 350ms;
+    -o-transition: width 350ms;
+    transition: width 350ms;
+
+    background: #113346;
+    position: fixed;
+    z-index: 10002;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
+}
+
+/* Fancy blur effect */
+#loading-bar-spinner {
+ display:none;
+}
