--- a/app/css/main.css
+++ b/app/css/main.css
@@ -71,9 +71,10 @@ svg{
 /*off-canvas-menu*/
 
 .filterActive{
-    background-color: #000000;
-    color: #ffffff !important;
+    background-color: white;
+    color: #000000 !important;
 }
+
 .left-off-canvas-menu,.right-off-canvas-menu{
     background: #f9f9f9;
 }
@@ -222,8 +223,9 @@ svg{
 }
 .diagrams-section{
     padding-top: 10px;
-    max-height: 900px;
-    overflow-y: scroll;
+    max-height: 853px;
+
+ overflow: auto;
 }
 
 .fi-magnifying-glass {
@@ -461,7 +463,7 @@ ul.off-canvas-list li  {
     -o-transition: width 350ms;
     transition: width 350ms;
 
-    background: green;
+    background: white;
     position: fixed;
     z-index: 10002;
     top: 0;
@@ -475,4 +477,59 @@ ul.off-canvas-list li  {
 /* Fancy blur effect */
 #loading-bar-spinner {
  display:none;
+}
+#scenarioBar
+{
+    padding: 5px;
+    border-top: solid 1px whitesmoke;
+    min-height: 896px;
+    height:100%;
+    position: absolute;
+    right: 0px;
+}
+ul.tabs-content {
+    display: block;
+    margin: 0 0 20px;
+    padding: 0;
+}
+.tabs {
+    list-style: none;
+    border-bottom: solid 1px #e6e6e6;
+    display: block;
+    height: 40px;
+    padding: 0;
+    margin-bottom: 20px;
+}
+.tabs dd.active, .tabs li.active {
+    border-top: 3px solid #2ba6cb;
+    margin-top: -3px;
+    border-left: solid 1px #e6e6e6;
+    border-right: solid 1px #e6e6e6;
+}
+
+
+.tabs dd, .tabs li {
+    display: block;
+    float: left;
+    padding: 0;
+    margin: 0;
+
+}
+.tabs dd > a, .tabs .tab-title > a {
+    display: block;
+    background-color: #EFEFEF;
+    color: #222222;
+    font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+    font-size: 1rem;
+    padding: 0.5rem 2rem;
+    height: 40px;
+}
+ul.off-canvas-list li {
+
+    background: #EFEFEF;
+}
+
+
+ul.off-canvas-list li a {
+    border-bottom: 0px solid #262626;
 }
