--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -89,7 +89,9 @@
 
 
                                                 <div ng-controller="tabController">
-                                                <tabset>
+                                                    <div ng-controller="StatusPanelMainChartController" ng-if="showCharts">
+
+                                                    <tabset>
 
                                                     <tab heading="Scenario">{{  useCaseDescription }}</tab>
                                                     <tab heading="Information" ng-if="showInformation" active="showInformation">
@@ -98,14 +100,16 @@
                                                         <h3>{{description.headline}}</h3>
                                                         {{description.desc}}
 
+                                                            <div class="chart" ng-repeat="chart in description.charts">
+                                                                <h3>{{chart.chart.title}}</h3>
+                                                                <nvd3 options="chart.chart.options" data="chart.chart.data" api="api"></nvd3>
+                                                                {{chart.chart.description}}
                                                             </div>
 
-                                                        <div ng-controller="StatusPanelMainChartController" ng-if="showCharts">
-                                                        <div class="chart" ng-repeat="chart in charts">
-                                                            <h3>{{chart.chart.title}}</h3>
-                                                            <nvd3 options="chart.chart.options" data="chart.chart.data" api="api"></nvd3>
-                                                            {{chart.chart.description}}
-                                                        </div>
+                                                            </div>
+
+
+
                                                     </div></tab>
 
                                                     <tab heading="Detail View" active="showDetailView" ng-if="showDetailView"><map-Object-Information align="Vertical"></map-Object-Information></tab>
