refectoring, small bugs

--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -93,7 +93,7 @@
 
 
                                                 <div ng-controller="tabController">
-                                                    <div ng-controller="StatusPanelMainChartController" ng-if="showCharts">
+                                                    <div ng-controller="StatusPanelMainChartController">
 
                                                         <tabset>
 
