--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -116,9 +116,14 @@
                                                             <tab heading="Detail View" active="showDetailView" ng-if="showDetailView">
                                                                 <map-Object-Information align="Vertical"></map-Object-Information>
                                                             </tab>
-                                                            <tab heading="Modal Split Simulator" active="showModalSplitSimulator" ng-if="showModalSplitSimulator">
+
+                                                            <tab heading="Event Simulator" active="showModalSplitSimulator" ng-if="showModalSplitSimulator">
+                                                                <div modalsplitsimulator></div>
+                                                            </tab>
+                                                            <tab heading="Modal Split" active="showModalSplit" ng-if="showModalSplit" active="showModalSplit">
                                                                 <div modalsplit></div>
                                                             </tab>
+
 
                                                     </div>
                                                     </tabset>
