--- a/app/modules/dashboard/partials/modalsplit.html
+++ b/app/modules/dashboard/partials/modalsplit.html
@@ -1,10 +1,7 @@
 <div ng-controller="modalSplitViewController">
-<h3> Modal Split</h3>
+<h3> {{headline}}</h3>
     
 <nvd3 options="modalSplitPieChartOptions" data="modalSplitPieChartData"
       api="api"></nvd3>
-
-
-
 
 </div>
