--- a/app/modules/dashboard/partials/dashboard.html
+++ b/app/modules/dashboard/partials/dashboard.html
@@ -14,7 +14,7 @@
                             <section ng-switch on="showBigMap" class="middle tab-bar-section tab-bar-section-map">
                                 <h1 class="title left" id="mapHeadline" style="color: black !important;">Map</h1>
                                 <a ng-switch-when="true" class="right btn-showHideMap" ng-click="showHideMap()"><i
-                                        class="fi-arrows-in large" style="color: black;"></i></a>
+                                        class="fi-arrows-in large" id="bigMapIcon"></i></a>
                                 <a ng-switch-when="false" class="right btn-showHideMap" ng-click="showHideMap()"><i
                                         class="fi-arrows-out large" style="color: black;"></i></a>
                             </section>
