--- a/app/css/main.css
+++ b/app/css/main.css
@@ -477,16 +477,15 @@ ul.off-canvas-list li {
     display: block;
     left: 0px;
     position: absolute;
-    bottom: 0%;
+    top: 0%;
     z-index: 10000;
-    width: 922px;
-    height: 830px;
+    width: auto;
+    height: auto;
     background: rgba(255, 255, 255, 0.95);
     font-size: 75%;
     border-style: solid;
     border-width: 2px;
     border-color: #008CBA !important;
-    display: none;
 
 }
 
